feat: improve VNPay payment integration and fix signature